# WebMapa

./: README.md
htmlmap/: HTMLmap.py  HTMLmap_dialog.py  HTMLmap_dialog_base.ui  Makefile  README.html  README.txt  __init__.py  metadata.txt  pb_tool.cfg  resources.py  resources.qrc
htmlmap/Base/: Curitiba_vias.shx  Curitiba_vias01.dbf  Curitiba_vias01.shp  Curitiba_vias01.shx  Linha_json.geojson  Poligono_json.geojson  Pontos_json.geojson  cortado.gpkg  fontawesone.txt  icones_fontAwsone.xlsx  rota.geojson
htmlmap/help/source/: conf.py  index.rst
htmlmap/libs/branca/: PKG-INFO  setup.cfg
htmlmap/libs/branca-0.4.1.dist-info/: RECORD
htmlmap/libs/branca/branca.egg-info/: SOURCES.txt
htmlmap/libs/geocoder/geocoder.egg-info/: PKG-INFO
htmlmap/test/: test_HTMLmap_dialog.py  test_resources.py
